White Space at the footer issue

--- a/Sandbox/portfolio/css/portfolio-screen.scss
+++ b/Sandbox/portfolio/css/portfolio-screen.scss
@@ -559,7 +559,7 @@ header {
     }
 
     #contact{
-        margin: 0px 10% 0px 10%;
+        padding: 0px 10% 0px 10%;
     }
 }
 
@@ -577,6 +577,9 @@ header {
     }
     #coreIMG{
         width: 60%;
+    }
+    #tile-container{
+        padding-bottom: 25px;
     }
 }
 
